--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
 }
+
 * {
   font-family: 'Inter', system-ui;
 }
+
 .wrapper {
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
@@ -19,7 +21,7 @@ body {
 header {
   border-bottom: 1px solid #eaeaea;
 
-  img{
+  img {
     margin-right: 15px;
   }
 
@@ -41,27 +43,29 @@ header {
   width: 220px;
   border-radius: 40px;
   margin-right: 30px;
-  transition: box-shadow 0.2s ease-in-out,transform 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
 
-  &:hover{   
+  &:hover {
     box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.06);
     transform: translateY(-5px);
   }
 
-  .favorite{
+  .favorite {
     position: absolute;
   }
 
-  span{
-    font-size:13px;
+  span {
+    font-size: 13px;
     text-transform: uppercase;
     opacity: 0.5;
   }
-  b{
+
+  b {
     font-size: 13px;
   }
-  h5{
+
+  h5 {
     font-weight: 400;
     font-size: 14px;
   }
@@ -83,22 +87,22 @@ header {
   padding: 0 15px;
 
   input {
-  border: 0;
-  padding: 13px;
-  font-size: 16px;
-  width: 200px;
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
   }
 
 }
 
 .overlay {
-position: absolute;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-background-color: rgba(0, 0, 0,0.5);
-z-index: 1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .drawer {
@@ -112,11 +116,17 @@ z-index: 1;
   display: flex;
   flex-direction: column;
 
-  h2{
+  .items {
+    overflow: auto;
+    margin-bottom: 40px;
+  }
+
+  h2 {
     margin: 0;
   }
-  .items{
-    flex:1;
+
+  .items {
+    flex: 1;
   }
 }
 
@@ -126,7 +136,7 @@ z-index: 1;
   overflow: hidden;
   padding: 20px;
 
-  .cartItemImg{
+  .cartItemImg {
     height: 70px;
     width: 70px;
     background-size: contain;
@@ -136,20 +146,22 @@ z-index: 1;
   }
 
 
-  p{
+  p {
     font-size: 16px;
     margin: 0;
   }
-  b{
+
+  b {
     font-size: 14px;
   }
 
-  .removeBtn{
+  .removeBtn {
     opacity: 0.5;
     cursor: pointer;
     transition: opacity 0.2s ease-in-out;
   }
-  &:hover{
+
+  &:hover {
     opacity: 1;
   }
 
@@ -157,45 +169,45 @@ z-index: 1;
 
 .cartTotalBlock {
   ul {
-  display: block;
-  margin-bottom: 40px !important;
+    display: block;
+    margin-bottom: 40px !important;
 
-  li {
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 20px;
-  }
+    li {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 20px;
+    }
 
-  div {
+    div {
       flex: 1;
       height: 1px;
       border-bottom: 1px dashed #dfdfdf;
       position: relative;
       top: -3px;
       margin: 0 7px;
-  }
+    }
 
   }
 
- .greenButton {
+  .greenButton {
     position: relative;
 
-    &:hover{
-      img{
+    &:hover {
+      img {
         transform: translateX(5px);
       }
     }
-    
-    img{
+
+    img {
       position: absolute;
       right: 30px;
       top: 20px;
-      transition: transform 0.2s ease-in-out;
+      transition: transform 0.15s ease-in-out;
     }
   }
 }
 
-.greenButton{
+.greenButton {
   width: 100%;
   height: 55px;
   background: #9dd558;
@@ -207,13 +219,12 @@ z-index: 1;
   cursor: pointer;
   transition: background 0.1 ease-in-out;
 
-  &:hover{
+  &:hover {
     background: lighten(#9dd558, 5%);
-   }
-  
-   &:active{
-    background: darken(#9dd558,5%);
-   }
+  }
 
- }
-  
+  &:active {
+    background: darken(#9dd558, 5%);
+  }
+
+}
